@@ -1,3 +1,8 @@
+2006-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/ttk/fonts.tcl: In a safe interp there is no osVersion
+	field in tcl_platform so work around it.
+
 2006-11-02  Daniel Steffen  <das@users.sourceforge.net>
 
 	* generic/ttk/ttkBlink.c, generic/ttk/ttkButton.c:
